--- a/DisabilityCompensation.API/DisabilityCompensation.API.csproj
+++ b/DisabilityCompensation.API/DisabilityCompensation.API.csproj
@@ -9,12 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DisabilityCompensation.Application\DisabilityCompensation.Application.csproj" />
+    <ProjectReference Include="..\DisabilityCompensation.Persistence\DisabilityCompensation.Persistence.csproj" />
     <ProjectReference Include="..\DisabilityCompensation.Shared\DisabilityCompensation.Shared.csproj" />
   </ItemGroup>
 
