--- a/DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj
+++ b/DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj
@@ -11,6 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DisabilityCompensation.Application\DisabilityCompensation.Application.csproj" />
     <ProjectReference Include="..\DisabilityCompensation.Domain\DisabilityCompensation.Domain.csproj" />
     <ProjectReference Include="..\DisabilityCompensation.Shared\DisabilityCompensation.Shared.csproj" />
   </ItemGroup>
