--- a/DisabilityCompensation.Domain/DisabilityCompensation.Domain.csproj
+++ b/DisabilityCompensation.Domain/DisabilityCompensation.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DisabilityCompensation.Shared\DisabilityCompensation.Shared.csproj" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
