compensation and parameter endpoints completed. Auth service added.

--- a/DisabilityCompensation.API/appsettings.Development.json
+++ b/DisabilityCompensation.API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=mert"
+    //"PostgreSqlConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=mert",
+    "PostgreSqlConnection": "Server=host.docker.internal;Port=5432;Database=postgres;User Id=postgres;Password=mert;"
   }
 }
