--- a/DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj
+++ b/DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DisabilityCompensation.Domain\DisabilityCompensation.Domain.csproj" />
+    <ProjectReference Include="..\DisabilityCompensation.Shared\DisabilityCompensation.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
