--- a/DisabilityCompensation.API/Dockerfile
+++ b/DisabilityCompensation.API/Dockerfile
@@ -1,7 +1,6 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
 WORKDIR /app
 EXPOSE 8080
 
@@ -9,7 +8,12 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["DisabilityCompensation.API/DisabilityCompensation.API.csproj", "DisabilityCompensation.API/"]
-RUN dotnet restore "./DisabilityCompensation.API/./DisabilityCompensation.API.csproj"
+COPY ["DisabilityCompensation.Application/DisabilityCompensation.Application.csproj", "DisabilityCompensation.Application/"]
+COPY ["DisabilityCompensation.Domain/DisabilityCompensation.Domain.csproj", "DisabilityCompensation.Domain/"]
+COPY ["DisabilityCompensation.Infrastructure/DisabilityCompensation.Infrastructure.csproj", "DisabilityCompensation.Infrastructure/"]
+COPY ["DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj", "DisabilityCompensation.Persistence/"]
+COPY ["DisabilityCompensation.Shared/DisabilityCompensation.Shared.csproj", "DisabilityCompensation.Shared/"]
+RUN dotnet restore "./DisabilityCompensation.API/DisabilityCompensation.API.csproj"
 COPY . .
 WORKDIR "/src/DisabilityCompensation.API"
 RUN dotnet build "./DisabilityCompensation.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
