--- a/DisabilityCompensation.API/appsettings.Development.json
+++ b/DisabilityCompensation.API/appsettings.Development.json
@@ -14,5 +14,20 @@
     "Issuer": "Disability.Compensation",
     "Audience": "Disability.Compensation",
     "ExpiryHours": 24
+  },
+  "FileUploadSettings": {
+    "Provider": "Local",
+    "LocalTargetPath": "uploads",
+    "RequestPath": "/uploads",
+    "Host": "37.148.209.85:8080/uploads"
+  },
+  "FileValidatorSettings": {
+    "AllowedExtensions": [
+      "*"
+    ],
+    "AllowedMimeTypes": [
+      "*"
+    ],
+    "MaxFileSize": 52428800 // 50*1024*1024 50MB
   }
 }
