--- a/DisabilityCompensation.Shared/DisabilityCompensation.Shared.csproj
+++ b/DisabilityCompensation.Shared/DisabilityCompensation.Shared.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+  </ItemGroup>
+
 </Project>
