--- a/DisabilityCompensation.API/Properties/launchSettings.json
+++ b/DisabilityCompensation.API/Properties/launchSettings.json
@@ -22,8 +22,8 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "httpPort": 5001,
       "environmentVariables": {
-        "ASPNETCORE_HTTP_PORTS": "8080",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "publishAllPorts": true
