--- a/DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj
+++ b/DisabilityCompensation.Persistence/DisabilityCompensation.Persistence.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\**" />
+    <EmbeddedResource Remove="Migrations\**" />
+    <None Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
@@ -15,10 +21,6 @@
   <ItemGroup>
     <ProjectReference Include="..\DisabilityCompensation.Domain\DisabilityCompensation.Domain.csproj" />
     <ProjectReference Include="..\DisabilityCompensation.Shared\DisabilityCompensation.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
